fixes height on safari bug

--- a/src/Layout/Question/Question.scss
+++ b/src/Layout/Question/Question.scss
@@ -54,6 +54,7 @@
 
   .content {
     position: absolute;
+    width: 100%;
     top: 3.5vh;
     box-sizing: border-box;
     margin: 12px 5px 5px 5px;
@@ -76,7 +77,7 @@
 
   .answers {
     position: absolute;
-    bottom: calc(1vh + 15px);
+    bottom: calc(2vh + 15px);
     list-style: none;
     width: 100%;
     padding: 0;
@@ -129,7 +130,7 @@
 
   .nextBtn {
     position: absolute;
-    bottom: 1vh;
+    bottom: 2vh;
     right: 8%;
     padding: 8px;
     font-size: 16px;
